# genovisio_marcnv

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  conda_example.yml  pyproject.toml
.github/workflows/: main.yml
marcnv/: main.py
marcnv/src/acmg/: acmg_classify.py  classification.py  core.py  criterion.py
marcnv/src/acmg/data/: acmg_gain.tsv  acmg_loss.tsv
tests/: test_classify.py
