[tool.poetry]
name = "marcnv"
version = "0.1.2"
description = "Automatic evaluation of ACMG criteria for CNV"
authors = ["Marcel Kucharik <marcel.kucharik@geneton.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
annotation = {git = "https://github.com/geneton-ltd/genovisio_annotation.git", tag= "v0.2.0"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[tool.poetry.scripts]
marcnv-classify = "marcnv.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
